# testnovel

./: .agent-crash-history.json  .coverage  .coveragerc  .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  DISCOVERIES.md  Dockerfile.agent  MANIFEST.in  PROGRESS.md  PROJECT_CHARTER.md  README.md  SIGNALS.md  analysis_workflow_issues.md  chapter_stats.json  dev-start.sh  dev-stop.sh  docker-compose.infra.yml  init_codex.sh  opencode.json  orchestrator.py  project_env.json  prompt_size_analysis.md  pyproject.toml  记录.md  长篇小说生成系统设计.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  main.py  models.py
backend/app/logic/: snowflake_manager.py
backend/app/services/: llm_engine.py  topone_client.py
backend/app/storage/: graph.py
backend/data/: snowflake.db
backend/tests/: test_api.py  test_llm_service.py  test_models.py  test_snowflake_workflow.py  test_storage.py  test_topone_client.py
doc/: API.md  (+25 more)
project/backend/: .coverage  .coveragerc  README.md  coverage.xml  docker-compose.memgraph.yml  docker-compose.yml  pyproject.toml  restart.sh
project/backend/app/: config.py  constants.py  main.py  models.py  ports.py
project/backend/app/llm/: __init__.py  schemas.py  topone_client.py  topone_gateway.py
project/backend/app/logic/: snowflake_manager.py
project/backend/app/services/: character_agent.py  dependency_matrix.py  entity_resolver.py  feedback_detector.py  impact_analyzer.py  llm_engine.py  simulation_engine.py  smart_renderer.py  subplot_manager.py  topone_client.py  world_master.py  world_state_service.py
project/backend/app/storage/: __init__.py  memgraph_storage.py  memgraph_world_state.py  ports.py  schema.py  snapshot.py  temporal_edge.py
project/backend/app/utils/: __init__.py  graph_algorithms.py
project/backend/data/: _kuzu_edge_count_test.db  _kuzu_edge_migration_test.db  _kuzu_limit_test.db  _kuzu_migration_step1.db  _kuzu_migration_test.db  _kuzu_optional_match_test.db  _kuzu_rename_rel_test.db  _kuzu_rename_test.db  _kuzu_schema_test.db  e2e-8010-2932241.db  e2e-8011-2964023.db  e2e-stage1.db  migrate-e2e.db  test-e2e.db  test-local-8000.db  test-run.db  test-run2.db  test-run3.db
project/backend/scripts/: performance_benchmark.py
project/backend/tests/: service_coverage_helpers.py  shared_stubs.py  test_api_minimal.py  test_llm_service.py  test_logic_check_world_state.py  test_memgraph_storage_integration.py  test_models.py  test_snowflake_workflow.py  test_topone_client.py  test_topone_gateway.py
project/backend/tests/integration/: conftest.py  storage_test_helpers.py  test_act_chapter_storage.py  test_agent_api.py  test_agent_storage.py  test_anchor_api.py  test_anchor_generation.py  test_anchor_storage.py  test_chapter_persistence.py  test_chapter_render_api.py  test_chapter_review_api.py  test_dm_api.py  test_dual_subgraph.py  test_entity_resolver.py  test_feedback_api.py  test_impact_analyzer.py  test_memgraph_storage.py  test_migration.py  test_pacing_control.py  test_review_e2e.py  test_roots_error_api.py  test_roots_list_api.py  test_simulation_api.py  test_simulation_flow.py  test_simulation_subplot_storage.py  test_snapshot.py  test_snowflake_step5.py  test_structure_edges.py  test_subplot_api.py  test_temporal_edge.py  (+2 more)
(+1132 files in other folders)
